# langgraph-projects

./: .gitignore  pyproject.toml  requirements.txt
autonomous-startup-research-copilot/backend/: .gitignore  pyproject.toml  requirements.txt
autonomous-startup-research-copilot/backend/agents/: planner_agent.py
autonomous-startup-research-copilot/backend/config/: settings.py
autonomous-startup-research-copilot/backend/state/: todo.py
autonomous-startup-research-copilot/backend/test/: main.py
autonomous-web-research-agent/backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
autonomous-web-research-agent/backend/graph/: builder.py  nodes.py  state.py  visual.py
autonomous-web-research-agent/backend/prompts/: prompt.py
autonomous-web-research-agent/backend/tests/: main.py  spawn_agent.py
autonomous-web-research-agent/backend/tools/: subagent_spawner.py  web_search.py
production-grade-optimized-rag/: .gitignore
production-grade-optimized-rag/backend/: .gitignore  TODO  main.py  pyproject.toml  requirements.txt
production-grade-optimized-rag/backend/pipeline/: ingestion_pipeline.py
production-grade-optimized-rag/backend/services/embedding/: chunk_embedder.py  pdf_chunker.py  pdf_reader.py  vector_store.py
production-grade-optimized-rag/backend/services/generation/: query_embedder.py  re_ranker.py  vector_search.py
production-grade-optimized-rag/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
production-grade-optimized-rag/takeaways/: base-line.md
(+17 files in other folders)
