[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.13.0",
    "langchain>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.1",
    "tavily>=1.1.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.48.0",
]
