[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "pymongo[srv]==3.12",
    "pypdf>=6.13.0",
    "sentence-transformers>=5.5.1",
    "transformers",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.56.0-Embedding-Gemma-preview" }
